# tiago_pro_head_robot-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
config/: show.rviz
config/motion_planner/: motion_planner.yaml
config/motions/: head_motions.yaml
debian/: changelog  control  copyright  gbp.conf  rules
module/: 10_default_controllers.yaml  10_robot_state_publisher.yaml
robots/: tiago_pro_head.urdf.xacro
ros2_control/: ros2_control.urdf.xacro
rpm/: ros-humble-tiago-pro-head-bringup.spec  ros-humble-tiago-pro-head-controller-configuration.spec  ros-humble-tiago-pro-head-description.spec  ros-humble-tiago-pro-head-robot.spec  template.spec
tiago_pro_head_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_pro_head_bringup/launch/: tiago_pro_head_bringup.launch.py  tiago_pro_head_play_motion2.launch.py
tiago_pro_head_bringup/module/: 10_play_motion2.yaml
tiago_pro_head_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_pro_head_controller_configuration/config/: head_controller.yaml
tiago_pro_head_controller_configuration/launch/: default_controllers.launch.py  head_controller.launch.py
tiago_pro_head_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_pro_head_description/config/: tiago_pro_head_configuration.yaml
tiago_pro_head_description/launch/: robot_state_publisher.launch.py  show.launch.py
tiago_pro_head_description/test/: test_description.launch.py  test_xacro.py
tiago_pro_head_description/tiago_pro_head_description/: launch_arguments.py
tiago_pro_head_description/urdf/: head.urdf.xacro
tiago_pro_head_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
urdf/: head.ros2_control.xacro  head.transmission.urdf.xacro
