<?xml version="1.0"?>
<package format="3">
  <name>tiago_pro_head_controller_configuration</name>
  <version>1.7.0</version>
  <description>The tiago_pro_head_controller_configuration package</description>
  <maintainer email="aina.irisarri@pal-robotics.com">Aina Irisarri</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend condition="$PAL_DISTRO >= alum">pal_module_cmake</build_depend>

  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_pal</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
