<?xml version="1.0"?>
<package format="3">
  <name>tiago_pro_head_robot</name>
  <version>1.6.1</version>
  <description>The tiago_pro_head_robot package</description>
  <maintainer email="aina.irisarri@pal-robotics.com">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>tiago_pro_head_bringup</exec_depend>
  <exec_depend>tiago_pro_head_controller_configuration</exec_depend>
  <exec_depend>tiago_pro_head_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
